# aiscan

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: parser_bench.rs
examples/: sample_ai_code.py
src/: audit.rs  cli.rs  config.rs  core.rs  cost.rs  lib.rs  main.rs  parser.rs  patterns.rs  report.rs
tests/: integration_test.rs
