[package]
name = "aiscan"
version = "0.1.0"
edition = "2021"
authors = ["AI Risk Scanner"]
description = "Fast security scanner for AI/LLM usage in codebases"
license = "MIT"
repository = "https://github.com/haasonsaas/aiscan"

[dependencies]
# CLI & UX
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
colored = "2.1"

# Core Runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
rayon = "1.8"

# AST & Parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"

# Pattern & Analysis
regex = "1.10"
glob = "0.3"
walkdir = "2.4"
ignore = "0.4"

# Cost Engine
tiktoken-rs = "0.5"

# HTTP & LLM
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph Operations
petgraph = "0.6"

# Configuration
toml = "0.8"
config = "0.14"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging & Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Utils
once_cell = "1.19"
dashmap = "5.5"
bytes = "1.5"
memmap2 = "0.9"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
pretty_assertions = "1.4"

[[bench]]
name = "parser_bench"
harness = false

[lib]
name = "aiscan"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3